Revert "fix(ServiceConfiguration): service config dropdown content overflows"
This reverts commit b9872ed10b2ac269c5efe3c2d2e525e7bce098fe.

--- a/src/styles/views/services/styles.less
+++ b/src/styles/views/services/styles.less
@@ -73,15 +73,6 @@
       align-items: center;
     }
   }
-
-  .services-version-text {
-    min-width: 0;
-    width: auto;
-  }
-
-  .service-version-dropdown-wrapper {
-    width: 100%;
-  }
 }
 
 .filter-tasks-bar {
